--- a/project/templates/overview.html
+++ b/project/templates/overview.html
@@ -25,7 +25,7 @@
 
             <td>{{ bid.description }}</td>
             {% if bid.scheduled_bid_date is not none: %}
-                <td>{{ bid.scheduled_bid_date.strftime('%x') }}</td>
+                <td>{{ bid.scheduled_bid_date.strftime('%x %I:%M %p') }}</td>
             {% else: %}
                 <td></td>
             {% endif %}
