--- a/project/templates/bid_form_edit.html
+++ b/project/templates/bid_form_edit.html
@@ -86,8 +86,10 @@
 
 <br>
 <div class="entries">
-  <h4><strong>Items </strong><a href="{{ url_for('item.item_add', bid_id=bid_id) }}"
-          class="btn btn-sm btn-success">Add</a></h4>
+  <h4><strong>Items </strong>
+    <a href="{{ url_for('item.item_add', bid_id=bid_id) }}" class="btn btn-sm btn-success">Add</a>
+    <a href="{{ url_for('item.item_add_custom', bid_id=bid_id) }}" class="btn btn-sm btn-info">Add Custom Item</a></h4>
+  </h4>
     <div class="datagrid">
     <table>
       <thead>
@@ -105,11 +107,28 @@
         {% for item in items %}
             <tr>
               <td width="75px">{{ item.description }}</td>
-              <td width="30px"><a href="{{ url_for('item.item_edit', item_edit_id=item.id) }}">Edit</a></td>
+
+              <!-- If the item is a custom item (no quantity) send to a different form to edit -->
+              {% if item.quantity %}
+                    <td width="30px"><a href="{{ url_for('item.item_edit', item_edit_id=item.id) }}">Edit</a></td>
+              {% else %}
+                    <td width="30px"><a href="{{ url_for('item.item_edit_custom', item_edit_id=item.id) }}">Edit</a></td>
+              {% endif %}
+
               <td width="30px"><a href="{{ url_for('item.item_delete', item_delete_id=item.id) }}"
                               onclick="return confirm('Are you sure you want to delete this item?');">Delete</a></td>
-              <td width="30px">{{ "{0:0.1f}".format(item.quantity) }}</td>
-              <td width="30px">{{ "{0:0.2f}".format(item.cost) }}</td>
+              {% if item.quantity %}
+                    <td width="30px">{{ "{0:0.1f}".format(item.quantity) }}</td>
+              {% else %}
+                    <td width="30px"></td>
+              {% endif %}
+
+              {% if item.cost %}
+                    <td width="30px">{{ "{0:0.2f}".format(item.cost) }}</td>
+              {% else %}
+                    <td width="30px"></td>
+              {% endif %}
+
               <td width="30px">{{ "{0:0.2f}".format(item.total) }}</td>
             </tr>
         {% endfor %}
