--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -31,6 +31,7 @@
             {% if session.logged_in %}
               <li><a href="/customers">Customers</a></li>
               <li><a href="/services">Services</a></li>
+              <li><a href="/calculator">Calculator</a></li>
               <li><a href="/logout">Logout</a></li>
             {% endif %}
           </ul>
