added form reset button to calculator page

--- a/project/templates/calculator.html
+++ b/project/templates/calculator.html
@@ -159,7 +159,8 @@
 
     <br>
     <br>
-     <button class="btn btn-sm btn-success" type="submit">Calculate</button>
+    <button class="btn btn-sm btn-success" type="submit">Calculate</button>
+    <a href="{{ url_for('calculator.calculator') }}" class="btn btn-sm btn-info">Reset</a></h4>
 </form>
 
 {% endblock %}
