--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -101,5 +101,21 @@
     });
      </script>
 
+      <script type="text/javascript">
+     $(function() {
+        $('#down_payment_date').datepicker({
+        dateFormat: 'yy-mm-dd'
+         });
+    });
+     </script>
+
+      <script type="text/javascript">
+     $(function() {
+        $('#paid_in_full_date').datepicker({
+        dateFormat: 'yy-mm-dd'
+         });
+    });
+     </script>
+
   </body>
 </html>
