add option to save bid pdf to local machine

--- a/project/templates/bid_form_edit.html
+++ b/project/templates/bid_form_edit.html
@@ -243,7 +243,9 @@
 <br>
     <button class="btn btn-sm btn-success" type="submit">Save</button>
     <a href="{{ url_for('bid.bid_create_pdf', bid_id_pdf=bid_id) }}" target="_blank" class="btn btn-sm btn-info"
-       role="button">Create PDF</a>
+       role="button">View PDF</a>
+    <a href="{{ url_for('bid.bid_create_pdf', bid_id_pdf=bid_id, save_to_disk=True) }}" class="btn btn-sm btn-warning"
+       role="button">Save PDF</a>
     <a href="{{ url_for('customer.customer_details', customer_id=customer.id) }}" class="btn btn-sm btn-primary"
        role="button">Return to Customer</a>
 </form>
