--- a/project/templates/bid_pdf.html
+++ b/project/templates/bid_pdf.html
@@ -70,19 +70,97 @@
               <td width="30px" style="text-align: right;">{{ "{0:0.2f}".format(item.total) }}</td>
             </tr>
         {% endfor %}
-
-       <thead>
-        <tr>
-          <th width="75px"><strong>Total</strong></th>
-          <th width="30px" style="text-align: right;"><strong>{{ "${0:0.2f}".format(sum_of_items[0]) }}</strong></th>
-        </tr>
-      </thead>
-
   {% endif %}
 
     </table>
-  </div>
 </div>
+
+<br>
+<div class="entries">
+    <div class="datagrid">
+    <table>
+      <thead>
+        <tr>
+            <th width="50px"><strong>Notes</strong></th>
+        </tr>
+      </thead>
+        <tr>
+            <td>
+            {{ bid.notes }}
+            </td>
+        </tr>
+    </table>
+</div>
+
+
+<br>
+<div class="entries">
+    <div class="datagrid">
+    <table>
+        <thead>
+            <tr>
+                <th width="75px"><strong>We Propose</strong></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tr>
+            <td>
+                Hereby to furnish material and labor complete in accordance with above specifications, for the sum of<br>
+            </td>
+            <td style="text-align: right;">
+                <br>
+                {{ "${0:0.2f}".format(sum_of_items[0]) }}
+            </td>
+        </tr>
+
+      <thead>
+        <tr>
+            <th colspan="2"><strong>Payment Outline</strong></th>
+        </tr>
+      </thead>
+        <tr>
+            <td>Deposit</td>
+            <td style="text-align: right;">{{ "${0:0.2f}".format(bid.down_payment_amount) }}</td>
+        </tr>
+
+        <tr>
+            <td>Remaining Balance Due Upon Completion of the Contract</td>
+            <td style="text-align: right;">{{ "${0:0.2f}".format(bid.down_payment_amount) }}</td>
+        </tr>
+
+       <thead>
+        <tr>
+            <th colspan="2"><strong>Acceptance of Proposal</strong></th>
+        </tr>
+      </thead>
+        <tr>
+            <td colspan="2">
+                The above prices, specifications and conditions are satisfactory and are hereby accepted.
+                You are authorized to do the work as specified. Payment will be made as outlined above.
+            </td>
+        </tr>
+        <tr>
+
+        </tr>
+
+        <tr>
+            <td>Signature:</td>
+            <td>Date:</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td height="60px">X__________________________________________________________________________</td>
+            <td height="60px">________________</td>
+        </tr>
+
+    </table>
+</div>
+
+<br>
+
 <p style="text-align: center; font-size:.9em;">Thank You For Your Business</p>
 
 {% endblock %}
