--- a/project/templates/bid_pdf.html
+++ b/project/templates/bid_pdf.html
@@ -22,8 +22,9 @@
             <div id="company_address">
                 179 Marvy St<br>
                 Lino Lakes, MN 55014<br>
-                612-508-2484
-                concrete@madsenservices.com
+                612-508-2484<br>
+                concrete@madsenservices.com<br>
+                MN License: BC690748
             </div>
         </td>
 
@@ -125,7 +126,24 @@
 
         <tr>
             <td>Remaining Balance Due Upon Completion of the Contract</td>
-            <td style="text-align: right;">{{ "${0:0.2f}".format(bid.down_payment_amount) }}</td>
+            <td style="text-align: right;">{{ "${0:0.2f}".format(sum_of_items[0] - bid.down_payment_amount) }}</td>
+        </tr>
+
+      <thead>
+        <tr>
+            <th><strong>Proposal Prepared By</strong></th>
+            <th><strong>Date</strong></th>
+        </tr>
+      </thead>
+
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+
+        <tr>
+            <td height="60px">X_______________________________________________________________</td>
+            <td height="60px">________________</td>
         </tr>
 
        <thead>
@@ -137,6 +155,7 @@
             <td colspan="2">
                 The above prices, specifications and conditions are satisfactory and are hereby accepted.
                 You are authorized to do the work as specified. Payment will be made as outlined above.
+                I have received a copy of the Pre-Lien Notice.
             </td>
         </tr>
         <tr>
@@ -158,11 +177,6 @@
 
     </table>
 </div>
-
-<br>
-
-<p style="text-align: center; font-size:.9em;">Thank You For Your Business</p>
-
 {% endblock %}
 </body>
 </html>
