--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -111,7 +111,7 @@
 
       <script type="text/javascript">
      $(function() {
-        $('#paid_in_full_date').datepicker({
+        $('#final_payment_date').datepicker({
         dateFormat: 'yy-mm-dd'
          });
     });
