add page numbers to pdf. Changed thead to tr with custom style so when pdf has multiple pages it doesnt show the original thead on the next page.

--- a/project/static/css/pdf.css
+++ b/project/static/css/pdf.css
@@ -57,6 +57,7 @@
   font-size: 15px;
   font-weight: bold;
 }
+
 .datagrid table thead th:first-child {
   border: none;
 }
@@ -79,4 +80,10 @@
 
 .datagrid table tbody tr:last-child td {
   border-bottom: none;
+}
+
+@page {
+   @bottom-right {
+    content: counter(page) " of " counter(pages);
+   }
 }
