--- a/project/templates/bid_pdf.html
+++ b/project/templates/bid_pdf.html
@@ -31,7 +31,7 @@
 
         <td style="vertical-align:top; width: 33.3333%; text-align: right; font-size: .8em;">
             <strong>Submitted By</strong><br>
-            Tom Madsen<br>
+            Thomas Madsen<br>
             Date: {{ bid_time }}<br>
             Invoice: {{ "{0:0>4}".format(bid.id) }}<br>
         </td>
